[package]
name = "ble_rust"
version = "0.1.0"
authors = ["jijinbei <hallucigenia2002@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ble_api"
path = "src/ble_api.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors


[[bin]]
name = "ble_post"
path = "src/ble_post.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp32-nimble = "0.7.0"
anyhow = "1"
embedded-svc = "0.28.0"
esp-idf-hal = "0.44.1"
heapless = "0.8.0"
serde = "1"
serde_json = "1"
chrono = {version = "0.4.38", features = ["serde"]}

[build-dependencies]
embuild = "0.32.0"
